--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
+    "@mui/styled-engine-sc": "^5.14.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^1.5.0",
     "bootstrap": "^4.5.0",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
+    "styled-components": "^5.3.11",
     "web-vitals": "^3.4.0"
   },
   "scripts": {
